--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,7 @@ indent_size = 2
 trim_trailing_whitespace = true
 end_of_line = lf
 insert_final_newline = true
+
+[*.{kt,kts}]
+ktlint_code_style = ktlint_official
+ktlint_standard_no-wildcard-imports = disabled
